compile-direct/tests/failing/2-comptime-calc-scientific-invalid/main.af
calc: /std/math/calc

main: () {
    calc.new(
        "sqrt(4, 2)",
        calc.end,
        (@f64) {
            @exit(0)
        }
    )
}
